test/domains/compilerErrors/rect-and-eq.chpl

var D1 = {1..3};
var D2 = {9..25 by 8};

D1 &= D2;   // error: not allowed
writeln(D1);
