test/domains/compilerErrors/rect-and-eq.good
rect-and-eq.chpl:5: error: cannot invoke '&=' on a rectangular domain
